@@ -1,3 +1,8 @@
+2020-04-01  Andrea Corallo  <andrea.corallo@arm.com>
+
+	* testsuite/experimental/net/execution_context/use_service.cc:
+	Require pthread and gthreads.
+
 2020-04-01  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* doc/xml/manual/appendix_free.xml: Move "free books" list from
